# src/routes/api.ts
@@ -97,6 +97,17 @@ router.put(
   */
 );
 
+router.delete(
+  "/orders/:orderId",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.remove
+  /*
+  #swagger.tags = ['Order']
+  #swagger.security = [{
+    "bearerAuth": ""
+  }]
+  */
+);
 
 router.post(
   "/banners",
